--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <article>
     <h2>La Orquidea</h2>
     <h3>Marcas destacadas</h3>
-    <img src="Capture.png">
+    <img src="Capture.PNG">
     <p>¿Buscas algo casual y cómodo para tu día a día? Checa toda la variedad de tenis casuales, flats, zapatos de plataforma y botas que tenemos para ti. Si buscas algo más formal, puedes elegir entre zapatillas, zapatos de vestir y mocasines. ¿Algo para relajarte en casa o salir a la playa? ¡Unas sandalias son lo ideal!<br>
     Si lo que buscas es algo para ejercitarte y practicar deporte cómodamente, en Coppel encuentras varios modelos de tenis para correr, taquetes de futbol, tenis para basquetbol y más.<br>
     Y para los pequeños, ¡hazlos lucir siempre con lo mejor! Sean zapatos escolares, casuales, tenis para niño y niña, zapatos juveniles o casuales, tenemos todo lo que necesitas. </p>     
